styling/fixed text overlay overflow, but still has problems on small screen widths

--- a/src/Stylesheets/TrailsContainer.css
+++ b/src/Stylesheets/TrailsContainer.css
@@ -19,5 +19,5 @@
     bottom: 5%;
     left: 10%;
     color: white;
-    font-size: .8em;
+    font-size: 70%;
 }
